--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -4,27 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init Plugin\n",
-      "Init Graph Optimizer\n",
-      "Init Kernel\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: 100%|██████████| 1.04M/1.04M [00:01<00:00, 675kB/s] \n",
-      "Downloading: 100%|██████████| 456k/456k [00:01<00:00, 232kB/s]  \n",
-      "Downloading: 100%|██████████| 665/665 [00:00<00:00, 273kB/s]\n",
-      "Downloading: 100%|██████████| 548M/548M [00:14<00:00, 39.0MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer, GPT2Model\n",
     "tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
@@ -36,23 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['x 23', 'x 127']"
+       "['q a', 'q b']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "text = \"Action a Reward 23 Action b Reward 127\"\n",
-    "reward_tokens = ['a 23', 'a 127']\n",
+    "reward_tokens = ['q a', 'q b']\n",
     "# for i in range(len(reward_tokens)):\n",
     "#     r = reward_tokens[i]\n",
     "#     reward_tokens.append(r+\" \")\n",
@@ -63,7 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[64]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "{'input_ids': tensor([[12502,   257, 32307,  2242,  7561,   275, 32307, 18112]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2242, 18112]"
+       "[257, 275]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,15 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2242  23\n",
-      "18112  127\n"
+      "257  a\n",
+      "275  b\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +220,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[257, 275, 269, 288, 304, 277, 308, 289, 1312, 474]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[tokenizer.encode(f'q {chr(i+97)}')[1] for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -228,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "cs",
    "language": "python",
    "name": "python3"
   },
@@ -242,12 +262,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.6.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c821b3ac4508363ab26790ea772768a10c1768efd11bb9891ab119aba586fc55"
+    "hash": "68a60cd258db7b0ffefe323bc815234642bdc065305646b3203103ebfd593f3c"
    }
   }
  },
