--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init Plugin\n",
-      "Init Graph Optimizer\n",
-      "Init Kernel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2Tokenizer, GPT2Model\n",
     "import torch\n",
@@ -26,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +35,7 @@
        "(100, 100, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_length = 512"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +169,8 @@
     "        i1, i2 = indexes[i]\n",
     "        ep1, ep2 = X[i1], X[i2]\n",
     "        rep = flattener(ep1, ep2)\n",
+    "        trunc_start = np.random.choice([True, False])\n",
+    "        rep = rep[-max_length:] if trunc_start else rep[:max_length]\n",
     "        data.append(rep)\n",
     "\n",
     "    df = pd.DataFrame({'history': data})\n",
@@ -178,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sizes = [25, 100, 500]"
+    "data_sizes = [25, 100, 500, 2000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,11 +205,18 @@
     "            fname = f'data/{typ}_{fl_name}_{size}.csv'\n",
     "            df.to_csv(fname, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow",
+   "display_name": "cs",
    "language": "python",
    "name": "python3"
   },
@@ -222,12 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.6.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c821b3ac4508363ab26790ea772768a10c1768efd11bb9891ab119aba586fc55"
+    "hash": "68a60cd258db7b0ffefe323bc815234642bdc065305646b3203103ebfd593f3c"
    }
   }
  },
