--- a/gpt2_eval.ipynb
+++ b/gpt2_eval.ipynb
@@ -15,7 +15,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Wed Dec 21 08:23:05 2022       \n",
+            "Wed Dec 21 09:12:55 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -24,7 +24,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla V100-PCIE...  Off  | 00000000:3B:00.0 Off |                    0 |\n",
-            "| N/A   46C    P0    39W / 250W |      0MiB / 32510MiB |      0%      Default |\n",
+            "| N/A   50C    P0    41W / 250W |   1479MiB / 32510MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -33,7 +33,7 @@
             "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
+            "|    0   N/A  N/A     37395      C   ...erSpeech/cs/bin/python3.6     1475MiB |\n",
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
@@ -169,6 +169,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "device = 'cuda'"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 7,
       "metadata": {},
       "outputs": [],
@@ -191,9 +200,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def get_reward(chosen_action):\n",
+        "def get_reward(chosen_action, out='out'):\n",
         "    p = 0.95\n",
         "    if chosen_action % 2 == 0: p = 0.05\n",
+        "    if out != 'out': p = 1 - p\n",
         "    return np.random.choice(2, p=[1 - p, p])"
       ]
     },
@@ -224,32 +234,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def generate(model, tokenizer, start, strategy='normal'):\n",
+        "def generate(model, tokenizer, start, strategy='normal', out='out', leng=500):\n",
         "    model.eval()\n",
         "    data = []\n",
+        "\n",
+        "    if out == 'in':\n",
+        "        leng = 100\n",
+        "    else:\n",
+        "        leng = 200\n",
         "\n",
         "    text = start\n",
         "    text = pre(text, strategy)\n",
         "    with torch.no_grad():\n",
-        "        while len(data) < 200:\n",
+        "        while len(data) < leng:\n",
         "            text = text.strip()\n",
         "            encodings_dict = tokenizer(text, return_tensors='pt', padding=True).to(device)\n",
-        "            input_ids = encodings_dict['input_ids']\n",
-        "            attention_mask=encodings_dict['attention_mask']\n",
+        "            input_ids = encodings_dict['input_ids'][:, -max_input_length:]\n",
+        "            attention_mask=encodings_dict['attention_mask'][:, -max_input_length:]\n",
         "            length = len(input_ids[0]) + 1\n",
-        "            sample_outputs = model.generate(input_ids = input_ids, attention_mask=attention_mask, max_length=length, num_beams=8, pad_token_id=tokenizer.eos_token_id)\n",
+        "            sample_outputs = model.generate(input_ids = input_ids, attention_mask=attention_mask, max_length=length, num_beams=2, pad_token_id=tokenizer.eos_token_id)\n",
         "            decoded = tokenizer.batch_decode(sample_outputs, skip_special_tokens=True)[0]\n",
-        "            chosen_action = decoded[len(text):].strip()\n",
+        "            chosen_action = decoded.strip()[-1]\n",
         "            if chosen_action not in rev_action_mapper:\n",
         "                print('Done! ->', decoded, \"*\", chosen_action)\n",
         "                return data\n",
         "            # print(text, decoded, chosen_action)\n",
         "            chosen_action_int = rev_action_mapper[chosen_action]\n",
-        "            reward = get_reward(chosen_action_int)\n",
+        "            reward = get_reward(chosen_action_int, out=out)\n",
         "            data.append([chosen_action_int, reward])\n",
         "            text = post(text, chosen_action, reward, strategy) \n",
         "\n",
@@ -258,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "metadata": {
         "id": "EZ9b7oPDgGaA"
       },
@@ -269,77 +284,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Expected Reward for normal_25: 0.23\n",
-            "Expected Reward for explicit_25: 0.22\n",
-            "Expected Reward for prompt_25: 0.24\n",
-            "Expected Reward for normal_100: 0.135\n",
-            "Expected Reward for explicit_100: 0.125\n",
-            "Expected Reward for prompt_100: 0.29\n",
-            "Expected Reward for normal_500: 0.255\n"
+            "Expected Reward for normal_25: 0.235\n",
+            "Expected Reward for normal_25: 0.75\n",
+            "Expected Reward for explicit_25: 0.245\n",
+            "Expected Reward for explicit_25: 0.77\n",
+            "Expected Reward for prompt_25: 0.22\n",
+            "Expected Reward for prompt_25: 0.69\n",
+            "Expected Reward for normal_100: 0.195\n",
+            "Expected Reward for normal_100: 0.76\n",
+            "Expected Reward for explicit_100: 0.18\n",
+            "Expected Reward for explicit_100: 0.87\n",
+            "Expected Reward for prompt_100: 0.32\n",
+            "Expected Reward for prompt_100: 0.75\n",
+            "Expected Reward for normal_500: 0.23\n",
+            "Expected Reward for normal_500: 0.71\n",
+            "Expected Reward for normal_2000: 0.345\n",
+            "Expected Reward for normal_2000: 0.72\n"
           ]
         }
       ],
       "source": [
-        "data_sizes = [25, 100, 500]\n",
+        "data_sizes = [25, 100, 500, 2000]\n",
         "\n",
         "for size in data_sizes:\n",
         "    names = ['normal', 'explicit', 'prompt']\n",
         "    if size > 200: names = names[:1]\n",
         "    for name in names:\n",
-        "        TRAIN_PARAMS = f'{name}_{size}'\n",
-        "        TRAIN_FILE_PATH = f\"data/train_{TRAIN_PARAMS}.csv\"\n",
-        "        VAL_FILE_PATH = f\"data/test_{TRAIN_PARAMS}.csv\"\n",
-        "        BASE_PATH = \"models/\"\n",
+        "        for out in ['out', 'in']:\n",
+        "            TRAIN_PARAMS = f'{name}_{size}'\n",
+        "            TRAIN_FILE_PATH = f\"data/train_{TRAIN_PARAMS}.csv\"\n",
+        "            VAL_FILE_PATH = f\"data/test_{TRAIN_PARAMS}.csv\"\n",
+        "            BASE_PATH = \"models/\"\n",
         "\n",
-        "        SAVE_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
-        "        LOGGING_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
-        "        SAVE_MODEL_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}_model/\"\n",
+        "            SAVE_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
+        "            LOGGING_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
+        "            SAVE_MODEL_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}_model/\"\n",
         "\n",
-        "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "            device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "\n",
-        "        MODEL_NAME = SAVE_MODEL_PATH\n",
+        "            MODEL_NAME = SAVE_MODEL_PATH\n",
         "\n",
-        "        tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
-        "        model = GPT2LMHeadModel.from_pretrained(MODEL_NAME).to(device)\n",
+        "            tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
+        "            model = GPT2LMHeadModel.from_pretrained(MODEL_NAME).to(device)\n",
         "\n",
-        "        max_input_length = 512\n",
-        "        max_target_length = 512\n",
-        "        tokenizer.pad_token = tokenizer.eos_token\n",
         "\n",
-        "        data = generate(model, tokenizer, texts, name)\n",
-        "        data = np.array(data)\n",
+        "            max_input_length = 512\n",
+        "            max_target_length = 512\n",
+        "            tokenizer.pad_token = tokenizer.eos_token\n",
         "\n",
-        "        fname = f'{TRAIN_PARAMS}.npy'\n",
-        "        fpath = os.path.join('data', 'arrays', fname)\n",
-        "        np.save(fpath, data)\n",
+        "            data = generate(model, tokenizer, texts, name, out)\n",
+        "            data = np.array(data)\n",
         "\n",
-        "        print(f'Expected Reward for {TRAIN_PARAMS}: {np.mean(data[:, -1], axis=-1)}')"
+        "            fname = f'{TRAIN_PARAMS}_{out}.npy'\n",
+        "            fpath = os.path.join('data', 'arrays', fname)\n",
+        "            np.save(fpath, data)\n",
+        "\n",
+        "            print(f'Expected Reward for {TRAIN_PARAMS}: {np.mean(data[:, -1], axis=-1)}')\n",
+        "\n",
+        "            del model\n",
+        "            torch.cuda.empty_cache()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SVs8xAjCkROR"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "By5UMof1qr30"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
