--- a/gpt2_eval.ipynb
+++ b/gpt2_eval.ipynb
@@ -173,71 +173,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "device = 'cuda'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "max_input_length=512"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "prompt = \"The goal is to chose the action which maximizes the reward.\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "device = 'cuda'\n",
+        "max_input_length=512\n",
+        "prompt = \"The goal is to chose the action which maximizes the reward.\"\n",
         "def get_reward(chosen_action, out='out'):\n",
         "    p = 0.95\n",
         "    if chosen_action % 2 == 0: p = 0.05\n",
         "    if out != 'out': p = 1 - p\n",
-        "    return np.random.choice(2, p=[1 - p, p])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "    return np.random.choice(2, p=[1 - p, p])\n",
         "def pre(text, strategy):\n",
         "    if strategy == 'normal': return text\n",
         "    if strategy == 'explicit': return text + 'action '\n",
-        "    else: return prompt + \" \" + text + 'action '"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "    else: return prompt + \" \" + text + 'action '\n",
         "def post(text, chosen_action, reward, strategy):\n",
         "    if strategy == 'normal': \n",
         "        return f'{text} {chosen_action} {reward}'\n",
         "    else: \n",
-        "        return f'{text} {chosen_action} reward {reward} action'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "        return f'{text} {chosen_action} reward {reward} action'\n",
         "def generate(model, tokenizer, start, strategy='normal', out='out', leng=500):\n",
         "    model.eval()\n",
         "    data = []\n",
@@ -268,49 +220,8 @@
         "            data.append([chosen_action_int, reward])\n",
         "            text = post(text, chosen_action, reward, strategy) \n",
         "\n",
-        "    return data"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "EZ9b7oPDgGaA"
-      },
-      "outputs": [],
-      "source": [
-        "texts = \"Start: \""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Expected Reward for normal_25: 0.235\n",
-            "Expected Reward for normal_25: 0.75\n",
-            "Expected Reward for explicit_25: 0.245\n",
-            "Expected Reward for explicit_25: 0.77\n",
-            "Expected Reward for prompt_25: 0.22\n",
-            "Expected Reward for prompt_25: 0.69\n",
-            "Expected Reward for normal_100: 0.195\n",
-            "Expected Reward for normal_100: 0.76\n",
-            "Expected Reward for explicit_100: 0.18\n",
-            "Expected Reward for explicit_100: 0.87\n",
-            "Expected Reward for prompt_100: 0.32\n",
-            "Expected Reward for prompt_100: 0.75\n",
-            "Expected Reward for normal_500: 0.23\n",
-            "Expected Reward for normal_500: 0.71\n",
-            "Expected Reward for normal_2000: 0.345\n",
-            "Expected Reward for normal_2000: 0.72\n"
-          ]
-        }
-      ],
-      "source": [
+        "    return data\n",
+        "texts = \"Start: \"\n",
         "data_sizes = [25, 100, 500, 2000]\n",
         "\n",
         "for size in data_sizes:\n",
@@ -374,7 +285,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.9"
+      "version": "3.6.9 (default, Mar 15 2022, 13:55:28) \n[GCC 8.4.0]"
     },
     "vscode": {
       "interpreter": {
