--- a/gpt2_training.ipynb
+++ b/gpt2_training.ipynb
@@ -15,7 +15,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Wed Dec 21 08:33:33 2022       \n",
+            "Wed Dec 21 10:21:58 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -24,7 +24,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla V100-PCIE...  Off  | 00000000:3B:00.0 Off |                    0 |\n",
-            "| N/A   67C    P0   153W / 250W |   5691MiB / 32510MiB |     88%      Default |\n",
+            "| N/A   46C    P0    39W / 250W |      0MiB / 32510MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -33,7 +33,7 @@
             "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
-            "|    0   N/A  N/A     36488      C   ...erSpeech/cs/bin/python3.6     5687MiB |\n",
+            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
@@ -133,106 +133,106 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# data_sizes = [25, 100, 500]\n",
-        "# ep_sizes = {25: 150, 100: 50, 500: 15}\n",
+        "data_sizes = [25, 100, 500]\n",
+        "ep_sizes = {25: 150, 100: 50, 500: 15}\n",
         "\n",
-        "# for size in data_sizes:\n",
-        "#     names = ['normal', 'explicit', 'prompt']\n",
-        "#     if size > 200: names = names[:1]\n",
-        "#     for name in names:\n",
-        "#         TRAIN_PARAMS = f'{name}_{size}'\n",
-        "#         TRAIN_FILE_PATH = f\"data/train_{TRAIN_PARAMS}.csv\"\n",
-        "#         VAL_FILE_PATH = f\"data/test_{TRAIN_PARAMS}.csv\"\n",
-        "#         BASE_PATH = \"models/\"\n",
+        "for size in data_sizes:\n",
+        "    names = ['normal', 'explicit', 'prompt']\n",
+        "    if size > 200: names = names[:1]\n",
+        "    for name in names:\n",
+        "        TRAIN_PARAMS = f'{name}_{size}'\n",
+        "        TRAIN_FILE_PATH = f\"data/train_{TRAIN_PARAMS}.csv\"\n",
+        "        VAL_FILE_PATH = f\"data/test_{TRAIN_PARAMS}.csv\"\n",
+        "        BASE_PATH = \"models/\"\n",
         "\n",
-        "#         SAVE_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
-        "#         LOGGING_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
-        "#         SAVE_MODEL_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}_model/\"\n",
-        "#         TRAIN_FILE_PATH, SAVE_MODEL_PATH\n",
-        "#         device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-        "#         MODEL_NAME = 'gpt2'\n",
-        "#         tokenizer = GPT2Tokenizer.from_pretrained(MODEL_NAME)\n",
-        "#         model = GPT2LMHeadModel.from_pretrained(MODEL_NAME).to(device)\n",
-        "#         max_input_length = 512\n",
-        "#         max_target_length = 512\n",
-        "#         tokenizer.pad_token = tokenizer.eos_token\n",
-        "#         input_col = \"history\"\n",
-        "#         train_qns = pd.read_csv(TRAIN_FILE_PATH).loc[:, input_col]\n",
-        "#         val_qns = pd.read_csv(VAL_FILE_PATH).loc[:, input_col]\n",
-        "#         class HistoryDataset(Dataset):\n",
-        "#             def __init__(self, txt_list, tokenizer, max_length):\n",
-        "#                 self.input_ids = []\n",
-        "#                 self.attn_masks = []\n",
-        "#                 self.labels = []\n",
-        "#                 self.action_tokens = [257, 275, 269, 288, 304, 277, 308, 289, 1312, 474]\n",
-        "#                 for txt in txt_list:\n",
-        "#                     encodings_dict = tokenizer(txt, padding=\"max_length\", max_length=max_input_length, truncation=True, return_tensors='pt')\n",
-        "#                     self.input_ids.append(torch.tensor(encodings_dict['input_ids']))\n",
-        "#                     self.attn_masks.append(torch.tensor(encodings_dict['attention_mask']))\n",
-        "#                     input_ids = encodings_dict['input_ids']\n",
-        "#                     labels = [[l if l in self.action_tokens else -100 for l in input_id] for input_id in input_ids]\n",
-        "#                     self.labels.append(torch.tensor(labels))\n",
+        "        SAVE_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
+        "        LOGGING_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}/\"\n",
+        "        SAVE_MODEL_PATH = BASE_PATH + f\"gpt_{TRAIN_PARAMS}_model/\"\n",
+        "        TRAIN_FILE_PATH, SAVE_MODEL_PATH\n",
+        "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "        MODEL_NAME = 'gpt2'\n",
+        "        tokenizer = GPT2Tokenizer.from_pretrained(MODEL_NAME)\n",
+        "        model = GPT2LMHeadModel.from_pretrained(MODEL_NAME).to(device)\n",
+        "        max_input_length = 512\n",
+        "        max_target_length = 512\n",
+        "        tokenizer.pad_token = tokenizer.eos_token\n",
+        "        input_col = \"history\"\n",
+        "        train_qns = pd.read_csv(TRAIN_FILE_PATH).loc[:, input_col]\n",
+        "        val_qns = pd.read_csv(VAL_FILE_PATH).loc[:, input_col]\n",
+        "        class HistoryDataset(Dataset):\n",
+        "            def __init__(self, txt_list, tokenizer, max_length):\n",
+        "                self.input_ids = []\n",
+        "                self.attn_masks = []\n",
+        "                self.labels = []\n",
+        "                self.action_tokens = [257, 275, 269, 288, 304, 277, 308, 289, 1312, 474]\n",
+        "                for txt in txt_list:\n",
+        "                    encodings_dict = tokenizer(txt, padding=\"max_length\", max_length=max_input_length, truncation=True, return_tensors='pt')\n",
+        "                    self.input_ids.append(torch.tensor(encodings_dict['input_ids']))\n",
+        "                    self.attn_masks.append(torch.tensor(encodings_dict['attention_mask']))\n",
+        "                    input_ids = encodings_dict['input_ids']\n",
+        "                    labels = [[l if l in self.action_tokens else -100 for l in input_id] for input_id in input_ids]\n",
+        "                    self.labels.append(torch.tensor(labels))\n",
         "\n",
-        "#             def __len__(self):\n",
-        "#                 return len(self.input_ids)\n",
+        "            def __len__(self):\n",
+        "                return len(self.input_ids)\n",
         "\n",
-        "#             def __getitem__(self, idx):\n",
-        "#                 return self.input_ids[idx], self.attn_masks[idx], self.labels[idx]\n",
-        "#         train_dataset = HistoryDataset(train_qns, tokenizer, max_length=max_input_length)\n",
-        "#         val_dataset = HistoryDataset(val_qns, tokenizer, max_length=max_input_length)\n",
-        "#         epochs = ep_sizes[size]\n",
-        "#         lr = 8e-5\n",
-        "#         batch_size = 16\n",
-        "#         training_args = TrainingArguments(\n",
-        "#             output_dir=SAVE_PATH,\n",
-        "#             learning_rate=lr,\n",
-        "#             do_train = True,\n",
-        "#             do_eval = True,\n",
-        "#             evaluation_strategy=\"steps\",\n",
-        "#             per_device_train_batch_size=batch_size,\n",
-        "#             per_device_eval_batch_size=batch_size,\n",
-        "#             weight_decay=0.01,\n",
-        "#             save_total_limit=1,\n",
-        "#             load_best_model_at_end=True,\n",
-        "#             num_train_epochs=epochs,\n",
-        "#             # fp16=True,\n",
-        "#             logging_dir=LOGGING_PATH,\n",
-        "#             logging_steps=50,\n",
-        "#             save_steps=100,\n",
-        "#             report_to = \"wandb\",\n",
-        "#             # hub_model_id='rg089/gpt2_mwp'\n",
-        "#             )\n",
-        "#         wandb_run = wandb.init(\n",
-        "#             project=\"rl_project_ad\",\n",
-        "#             config={\n",
-        "#                 \"per_device_train_batch_size\": batch_size,\n",
-        "#                 \"learning_rate\": lr})\n",
+        "            def __getitem__(self, idx):\n",
+        "                return self.input_ids[idx], self.attn_masks[idx], self.labels[idx]\n",
+        "        train_dataset = HistoryDataset(train_qns, tokenizer, max_length=max_input_length)\n",
+        "        val_dataset = HistoryDataset(val_qns, tokenizer, max_length=max_input_length)\n",
+        "        epochs = ep_sizes[size]\n",
+        "        lr = 8e-5\n",
+        "        batch_size = 16\n",
+        "        training_args = TrainingArguments(\n",
+        "            output_dir=SAVE_PATH,\n",
+        "            learning_rate=lr,\n",
+        "            do_train = True,\n",
+        "            do_eval = True,\n",
+        "            evaluation_strategy=\"steps\",\n",
+        "            per_device_train_batch_size=batch_size,\n",
+        "            per_device_eval_batch_size=batch_size,\n",
+        "            weight_decay=0.01,\n",
+        "            save_total_limit=1,\n",
+        "            load_best_model_at_end=True,\n",
+        "            num_train_epochs=epochs,\n",
+        "            # fp16=True,\n",
+        "            logging_dir=LOGGING_PATH,\n",
+        "            logging_steps=50,\n",
+        "            save_steps=100,\n",
+        "            report_to = \"wandb\",\n",
+        "            # hub_model_id='rg089/gpt2_mwp'\n",
+        "            )\n",
+        "        wandb_run = wandb.init(\n",
+        "            project=\"rl_project_ad\",\n",
+        "            config={\n",
+        "                \"per_device_train_batch_size\": batch_size,\n",
+        "                \"learning_rate\": lr})\n",
         "\n",
-        "#         now = datetime.datetime.now()\n",
-        "#         current_time = now.strftime(\"%d.%b.%Y-%-I:%M:%S%p\")\n",
+        "        now = datetime.datetime.now()\n",
+        "        current_time = now.strftime(\"%d.%b.%Y-%-I:%M:%S%p\")\n",
         "\n",
-        "#         run_name = SAVE_PATH.rstrip(\"/\").split(\"/\")[-1] + \"-\" + current_time \n",
-        "#         wandb_run.name = run_name\n",
-        "#         print(run_name)\n",
-        "#         trainer = Trainer(\n",
-        "#                     model=model,  \n",
-        "#                     args=training_args, \n",
-        "#                     train_dataset=train_dataset, \n",
-        "#                     eval_dataset=val_dataset, \n",
-        "#                     data_collator=lambda data: {'input_ids': torch.stack([f[0] for f in data]),\n",
-        "#                                                                     'attention_mask': torch.stack([f[1] for f in data]),\n",
-        "#                                                                     'labels': torch.stack([f[2] for f in data])})\n",
+        "        run_name = SAVE_PATH.rstrip(\"/\").split(\"/\")[-1] + \"-\" + current_time \n",
+        "        wandb_run.name = run_name\n",
+        "        print(run_name)\n",
+        "        trainer = Trainer(\n",
+        "                    model=model,  \n",
+        "                    args=training_args, \n",
+        "                    train_dataset=train_dataset, \n",
+        "                    eval_dataset=val_dataset, \n",
+        "                    data_collator=lambda data: {'input_ids': torch.stack([f[0] for f in data]),\n",
+        "                                                                    'attention_mask': torch.stack([f[1] for f in data]),\n",
+        "                                                                    'labels': torch.stack([f[2] for f in data])})\n",
         "\n",
-        "#         trainer.evaluate()\n",
-        "#         trainer.train()\n",
-        "#         import math\n",
-        "#         eval_results = trainer.evaluate()\n",
-        "#         print(f\"Perplexity: {math.exp(eval_results['eval_loss']):.2f}\")\n",
-        "#         eval_results\n",
-        "#         trainer.save_model(SAVE_MODEL_PATH)\n",
-        "#         wandb_run.finish()\n",
-        "#         del model, tokenizer, trainer, train_dataset, val_dataset\n",
-        "#         torch.cuda.empty_cache()\n"
+        "        trainer.evaluate()\n",
+        "        trainer.train()\n",
+        "        import math\n",
+        "        eval_results = trainer.evaluate()\n",
+        "        print(f\"Perplexity: {math.exp(eval_results['eval_loss']):.2f}\")\n",
+        "        eval_results\n",
+        "        trainer.save_model(SAVE_MODEL_PATH)\n",
+        "        wandb_run.finish()\n",
+        "        del model, tokenizer, trainer, train_dataset, val_dataset\n",
+        "        torch.cuda.empty_cache()\n"
       ]
     },
     {
@@ -864,7 +864,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.9"
+      "version": "3.6.9 (default, Mar 15 2022, 13:55:28) \n[GCC 8.4.0]"
     },
     "vscode": {
       "interpreter": {
